# crud_and_tests

./: main.py  pyproject.toml  settings.py
src/api/: routers.py
src/api/v1/: order.py
src/dependencies/: order.py
src/exceptions/: __init__.py  auth_errors.py  service_errors.py  sql_errors.py
src/mapper/: __init__.py  order.py
src/models/: order.py
src/repositories/: abstract_repository.py  order_repository.py  sqlalchemy_repository.py
src/schemas/: __init__.py  order.py
src/services/: __init__.py  base.py  order.py  tests.py
