[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Yerassyliitu <34080@iitu.edu.kz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.34"
pydantic = "^2.9.1"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
loguru = "^0.7.2"
pytest = "^8.3.3"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
